--- a/layouts/partials/get-bibentries.html
+++ b/layouts/partials/get-bibentries.html
@@ -1,7 +1,7 @@
 <!-- Load in the bib.json file as a page resource -->
 {{ $bibentries := "" }}
 {{ $bibfilePath := "bib.json" }}
-{{ with .Page.Resources.Get $bibfilePath }}
+{{ with resources.Get $bibfilePath }}
     {{ with .Err }}
         {{ errorf "Could not parse bib.json file at %q. Encountered the following error:" $bibfilePath . }}
     {{ else }}
